# odds-and-ends

./: LICENSE
aliasing/: README.md
aliasing/plasmawallpaper/: CMakeLists.txt  Messages.sh  default.nix
aliasing/plasmawallpaper/package/: metadata.desktop
aliasing/plasmawallpaper/package/contents/ui/: config.qml  main.qml
aliasing/plasmawallpaper/plugin/: CMakeLists.txt  plasmawallpaperplugin.cpp  plasmawallpaperplugin.h  qmldir
aliasing/qtapp/: aliasing.cpp  aliasing.pro  default.nix
routine/: README.md  default.nix  routine.cpp  routine.pro
